# testing-course

lab1/: .cursorignore  README.md  RECOMMENDATIONS.md  TODO.md  build.gradle.kts  settings.gradle.kts
lab1/report/: main.typ  test.py
lab1/report/assets/: task1.result.txt  task2.result.txt  task3.result.txt
lab1/task1/src/test/resources/: values.csv
lab1/task2/: DECISION_TABLES.md
lab1/task3/: TRANSITION_TABLES.md  build.gradle.kts
lab2/: README.md  build.gradle.kts  settings.gradle.kts  tmp.py
lab2/report/: main.typ
lab2/src/main/java/testing/lab2/: Main.java
lab2/src/test/java/logarithm/integration/: BaseNLogarithmIntegrationTest.java
lab2/src/test/java/logarithm/module/: BaseNLogarithmTest.java  NaturalLogarithmTest.java
lab2/src/test/java/system/integration/: EquationSystemIntegrationTest.java
lab2/src/test/java/system/module/: EquationSystemTest.java
lab2/src/test/java/trigonometry/integration/: CosecantIntegrationTest.java
lab2/src/test/java/trigonometry/module/: CosecantTest.java  SineTest.java
lab2/src/test/resources/: csc.csv  equation_system.csv  ln.csv  log_base_n.csv  sin.csv
lab2/src/test_ext/: AbstractEquationSystemTest.java  Step1_RealTrigTest.java
lab2/visualizer/: main.py  pyproject.toml
lab3/: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
lab3/report/: main.typ
lab3/src/main/java/testing/lab3/: AuthCookieConfig.java  Main.java  Utils.java
lab3/src/main/resources/: properties.yaml
lab3/src/test/java/testing/lab3/: AnswerQuestionTest.java  CreatePollTest.java  CreateQuestionTest.java  (+6 more)
(+43 files in other folders)
