[project]
name = "visualizer"
version = "0.1.0"
description = "Visualizes graphs from CSVs"
authors = [
    {name = "S1riyS",email = "kirill.ankudinov.94@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib (>=3.10.8,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
